--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,28 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+@layer utilities {
+  @keyframes float {
+    0% {
+      transform: translateY(0);
+      opacity: 0;
+    }
+    50% {
+      transform: translateY(-20px);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 0;
+    }
+  }
+
+  .gopher {
+    z-index: 20; /* Ensure it is above the background */
+    animation: float 4s ease-in-out infinite;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -27,3 +49,4 @@
     --radius: 0.5rem;
   }
 }
+
